--- a/WindowApp/WindowApp.vcxproj
+++ b/WindowApp/WindowApp.vcxproj
@@ -58,6 +58,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>d3d12.lib;dxgi.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -77,7 +78,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="App.cpp" />
     <ClCompile Include="CliOptions.cpp" />
+    <ClCompile Include="GraphicsError.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -86,7 +89,20 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="App.h" />
     <ClInclude Include="CliOptions.h" />
+    <ClInclude Include="directx\d3dx12.h" />
+    <ClInclude Include="directx\d3dx12_barriers.h" />
+    <ClInclude Include="directx\d3dx12_check_feature_support.h" />
+    <ClInclude Include="directx\d3dx12_core.h" />
+    <ClInclude Include="directx\d3dx12_default.h" />
+    <ClInclude Include="directx\d3dx12_pipeline_state_stream.h" />
+    <ClInclude Include="directx\d3dx12_property_format_table.h" />
+    <ClInclude Include="directx\d3dx12_render_pass.h" />
+    <ClInclude Include="directx\d3dx12_resource_helpers.h" />
+    <ClInclude Include="directx\d3dx12_root_signature.h" />
+    <ClInclude Include="directx\d3dx12_state_object.h" />
+    <ClInclude Include="GraphicsError.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
